# Trae-Code

./: .gitignore  README.md
FCMacros/: create_cube_gui.FCMacro
FCStds/: cube_20251103_070307.20251103-070307.FCBak  cube_20251103_070307.FCStd  cube_20251103_075905.FCStd  cube_20251103_080647.FCStd  cube_20251103_081018.FCStd  custom_cube.20251103-070344.FCBak  custom_cube.FCStd
FreeCadpys/: create_cube.py  draft_line_debug.txt  draft_line_example.py
githubdenglu/: README.md  github_login.ps1
putongpys/: README.md  array_merge.py  hello_world.py  pypi_mirror_manager.py  setup.cfg  show_libraries_location.py
scripts/: README_FIXED_PATH.md  run_cube_with_fixed_path.ps1  run_cube_with_params.ps1
stls/: custom_cube.stl
