[metadata]
name = qoder-code-project
version = 0.1.0
description = A simple Python project (Trae适配版本)
author = wanghj-dz
author_email = your.email@example.com

[options]
python_requires = >=3.13
packages = find:
install_requires =

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests

[coverage:run]
source = .

[trae]
# Trae特定配置部分
enabled = true
python_version_compatibility = auto
# 适配Trae的项目配置
project_type = python

[trae:environment]
development = true
testing = false
production = false